# hermes-enhanced-memory

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: .yfm  api-reference.md  architecture.md  comparison.md  configuration.md  embedding-providers.md  getting-started.md  index.md  toc.yaml
enhanced_memory/: __init__.py  condenser.py  embedding_providers.py  embeddings.py  plugin.yaml  store.py
tasks/: archive.md  weekly.md
tests/: conftest.py  test_condenser.py  test_condenser_llm.py  test_embedding_providers.py  test_embeddings.py  test_plugin.py  test_store.py
