[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hermes-enhanced-memory"
version = "1.0.0"
description = "Enhanced Memory plugin for Hermes Agent — two-tier fact store with condensation and semantic search"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Dmitriy Labaznov", email = "mail@labaznov.com"},
]
keywords = ["hermes-agent", "memory", "plugin", "semantic-search", "sqlite", "fts5"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/labaznov/hermes-enhanced-memory"
Documentation = "https://github.com/labaznov/hermes-enhanced-memory/tree/main/docs"
Repository = "https://github.com/labaznov/hermes-enhanced-memory"
Issues = "https://github.com/labaznov/hermes-enhanced-memory/issues"

[project.optional-dependencies]
gemini = ["google-genai>=1.0,<2"]
openai = ["openai>=1.0,<3"]
local = ["sentence-transformers>=2.0,<4", "torch>=2.0,<3"]
dev = ["pytest>=8.0,<9", "pytest-cov>=5.0,<7"]
all = ["google-genai>=1.0,<2", "openai>=1.0,<3"]

[tool.setuptools.packages.find]
include = ["enhanced_memory*"]

[tool.setuptools.package-data]
enhanced_memory = ["plugin.yaml", "SKILL.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
